// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should render the component when custom column component is provided 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="govuk-table__cell"
        >
          <h1>
            DummyValue
          </h1>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`should render the field value when custom column component is not provided 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="govuk-table__cell"
        >
          DummyValue
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
